--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "jose": "^6.0.10",
     "js-cookie": "^3.0.5",
     "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "yup": "^1.6.1"
