--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "jose": "^6.0.10",
     "js-cookie": "^3.0.5",
     "next": "15.2.4",
